--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "eslint-plugin-jsdoc": "^39.3.6",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
