--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wunderwerk/verdaccio-static-access-token-middleware-plugin",
-  "version": "1.0.2",
+  "version": "1.0.2-lb-fix",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -39,8 +39,5 @@
     "eslint-plugin-jsdoc": "^39.3.6",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
   }
 }
